<resources>
    <string name="app_name">Chalana</string>
    <string name="no_internet_message">No Internet Connection !</string>
    <string name="chat_title">TmDone Customer Care</string>
    <string name="fetching_data">fetching</string>
    <string name="delivered">delivered</string>
    <string name="message_hint">Type your message here...</string>
    <string name="empty_message_error">Type your message !</string>
    <string name="ok">Okay</string>
    <string name="init_error">Initializing failed  !</string>
    <string name="permissions_denied">Permission denied !</string>
    <string name="image_error">Error image file !</string>
    <string name="init_message_error">Init message sending failed !\nContact developers.</string>
    <string name="start_your_conversation">Start your conversation !</string>
    <string name="typing">Typing...</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="chat_done_message">Thank you for joining with us !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait... Data is loading !</string>
</resources>