<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".chat.ChatActivity">


        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/chat_header_color"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:padding="10dp"
                android:src="@drawable/ic_back" />


            <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_admin"
                style="@style/headerImageStyle"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/img_user_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_user_name"
                    style="@style/chatTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/fetching_data" />

                <TextView
                    android:id="@+id/lbl_user_status"
                    style="@style/userStatusStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/fetching_data" />

            </LinearLayout>


        </LinearLayout>


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/chat_shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/layout_chat__loading_item"></include>

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/ll_animation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:visibility="visible"
                app:lottie_autoPlay="true"
                app:lottie_fileName="empty_chat_animation.json"
                app:lottie_loop="false"
                app:lottie_repeatMode="restart" />

            <TextView
                android:id="@+id/lbl_empty_chat_message"
                style="@style/emptyChatMessageStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_your_conversation" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_message_container"
            style="@style/bottomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/card_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="60dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_image"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/attachment_icon" />

                    <EditText

                        android:id="@+id/txt_message"
                        style="@style/RoundedEditTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:hint="@string/message_hint"
                        android:maxLines="7"
                        android:minHeight="50dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/black" />


                </LinearLayout>

            </LinearLayout>


            <!--            <androidx.cardview.widget.CardView-->
            <!--                android:layout_width="50dp"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:layout_marginRight="10dp"-->
            <!--                app:cardCornerRadius="50dp"-->
            <!--                app:cardElevation="5dp">-->

            <ImageView
                android:id="@+id/btn_send"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"

                android:layout_marginEnd="10dp"
                android:src="@drawable/send_icon" />
            <!--            </androidx.cardview.widget.CardView>-->

        </LinearLayout>

    </LinearLayout>

</layout>